--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -19,10 +19,20 @@
                 display: flex;
                 gap: 16px;
 
+                @media (max-width: 600px) {
+                    flex-direction: column;
+                }
+
                 > button {
                     height: 40px;
                 }
             }
+            @media (max-width: 450px) {
+   
+                flex-direction: column;
+            }
+
+
         }
     }
 
@@ -50,6 +60,11 @@
                 font-weight: 500;
                 font-size: 14px;
             }
+
+            @media (max-width: 450px) {
+                flex-direction: column;
+                
+            }
         }
 
         form {
@@ -62,6 +77,13 @@
                 box-shadow: 0 2px 12px rgba(0,0,0,0.04);
                 resize: vertical;
                 min-height: 130px;
+
+                @media (max-width: 450px) {
+                    width: 95%;
+                   margin: 10px;
+                    display: flex;
+                }
+              
             }
 
             .form-footer{
@@ -85,6 +107,10 @@
                         color: var(--text-color);
                         font-weight: 500;
                         font-size: 18px;
+                    }
+
+                    @media (max-width: 450px) {
+                        flex-direction: column;
                     }
                 }
 
@@ -115,7 +141,10 @@
                 gap: 16px;
             }
         }
+        @media (max-width: 450px) {
+         width: 98%;
     }
+}
 
     .darkmodebutton {
         position: fixed;
